--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-tess
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kata Mencolok</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #F8E8EE;
+            margin: 0;
+        }
+        h1 {
+            font-size: 5rem;
+            color: #FF6B6B;
+            font-family: Arial, sans-serif;
+            font-weight: bold;
+            text-shadow: 2px 2px 10px rgba(255, 107, 107, 0.5);
+        }
+    </style>
+</head>
+<body>
+    <h1>Hallo Zua!!!</h1>
+</body>
+</html>
