--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kata Mencolok</title>
+    <title>aku eri</title>
     <style>
         body {
             display: flex;
@@ -14,7 +14,7 @@
             margin: 0;
         }
         h1 {
-            font-size: 5rem;
+            font-size: 3rem;
             color: #FF6B6B;
             font-family: Arial, sans-serif;
             font-weight: bold;
